--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,143 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+	th:replace="~{base::layout(~{::section})}">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-<h1> Index Page</h1>
+<section>
+	<!--Slider Applied-->
+	<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+	  <div class="carousel-inner">
+	    <div class="carousel-item active">
+	      <img src="img/carousel1.jpg" class="d-block w-100" alt="..." height="350px">
+	    </div>
+	    <div class="carousel-item">
+	      <img src="img/carousel2.jpg" class="d-block w-100" alt="..." height="350px">
+	    </div>
+	    <div class="carousel-item">
+	      <img src="img/carousel3.jpg" class="d-block w-100" alt="..." height="350px">
+	    </div>
+	  </div>
+	  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	    <span class="visually-hidden">Previous</span>
+	  </button>
+	  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	    <span class="visually-hidden">Next</span>
+	  </button>
+	</div>
+	<!--Slider End-->
+	
+	<!-- Category Module -->
+	<div class="container">
+		<div class="row">
+			<p class="text-center fs-4">Category</p>
+			<div class="col-md-2">
+				<div class="card rounded-circle shadow p-3 mb-5 bg-body-tertiary rounded">
+					<div class="card-body text-center"> 
+						<img src="img/category_img/appli.png" width="60%" height="140px">
+						<p>Electronics</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="col-md-2">
+				<div class="card rounded-circle shadow p-3 mb-5 bg-body-tertiary rounded">
+					<div class="card-body text-center"> 
+						<img src="img/category_img/beauty.png" width="60%" height="140px">
+						<p>Beauty</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="col-md-2">
+				<div class="card rounded-circle shadow p-3 mb-5 bg-body-tertiary rounded">
+					<div class="card-body text-center"> 
+						<img src="img/category_img/pant.png" width="60%" height="140px">
+						<p>Fashion</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="col-md-2">
+				<div class="card rounded-circle shadow p-3 mb-5 bg-body-tertiary rounded">
+					<div class="card-body text-center"> 
+						<img src="img/category_img/laptop.jpg" width="60%" height="140px">
+						<p>Laptop</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="col-md-2">
+				<div class="card rounded-circle shadow p-3 mb-5 bg-body-tertiary rounded">
+					<div class="card-body text-center"> 
+						<img src="img/category_img/mobile.png" width="60%" height="140px">
+						<p>Handset</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="col-md-2">
+				<div class="card rounded-circle shadow p-3 mb-5 bg-body-tertiary rounded">
+					<div class="card-body text-center"> 
+						<img src="img/category_img/grocery.jpg" width="60%" height="140px">
+						<p>Grocery</p>
+				</div>
+			</div>
+		</div>
+		
+	</div>
+	</div>
+	<!-- Category Module End -->
+	
+	<!-- Latest Updates -->
+	<div class="container-fluid bg-light p-3">
+		<div class="row">
+			<p class="text-center fs-4">Latest Product</p>
+			
+			<div class="col-md-3">
+				<div class="card">
+					<div class="card-body text-center"> 
+						<img alt="" src="img/product_img/laptop.jpg" class="" width="65%" height="140px">
+						<p class="text-center">HP Laptop</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="col-md-3">
+				<div class="card">
+					<div class="card-body text-center"> 
+						<img alt="" src="img/product_img/laptop.jpg" class="" width="65%" height="140px">
+						<p class="text-center">HP Laptop</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="col-md-3">
+				<div class="card">
+					<div class="card-body text-center"> 
+						<img alt="" src="img/product_img/laptop.jpg" class="" width="65%" height="140px">
+						<p class="text-center">HP Laptop</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="col-md-3">
+				<div class="card">
+					<div class="card-body text-center"> 
+						<img alt="" src="img/product_img/laptop.jpg" class="" width="65%" height="140px">
+						<p class="text-center">HP Laptop</p>
+				</div>
+			</div>
+		</div>
+			
+		</div>
+	</div>
+	<!-- Latest Updates End -->
+	
+</section>
 </body>
 </html>
